Closed Bug 503052 Opened 15 years ago Closed 15 years ago

VMPI/MMgcPortWin.cpp and WinPortUtils are producing warning C4640 when compiling with the player

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: brbaker, Unassigned)

Details

Attachments

(1 file)

This causes problems if you try and compile with warnings as errors.

VMPI\MMgcPortWin.cpp(492) : warning C4640: 'dbgHelpLock' : construction of local static object is not thread-safe

VMPI\WinPortUtils.cpp(62) : warning C4640: 'gTimeZoneInfoLock' : construction of local static object is not thread-safe

Moving the static member outside of the InitDbHelp() and UpdateTimeZoneInfo() fixes the error (recommended by Lars)
Flags: flashplayer-triage+
Flags: flashplayer-qrb?
Attachment #387423 - Flags: review?(lhansen)
This bug is currently a blocking issue for the successful compilation of FRR
Comment on attachment 387423 [details] [diff] [review]
Fixes for c4640 warning

Please place a comment above each of the two moved lines to the effect that they're not inside the function because that triggers that specific compiler warning.
Attachment #387423 - Flags: review?(lhansen) → review+
Added comment and pushed 2107:cbd25c20e6a1
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: flashplayer-qrb? → flashplayer-qrb+
Resolution: --- → FIXED
Resolved fixed engineering / work item that has been pushed.  Setting status to verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: