Bug 503052: MSVC warning C4640, "'instance' : construction of local static object is not thread-safe" is produced when compiling with the player (r+ lhansen)